--- a/SiteHelloWorld/index.html
+++ b/SiteHelloWorld/index.html
@@ -10,5 +10,6 @@
   <h1>Hello World!</h1>  
   <hr>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim at quidem qui dolorem ratione tenetur quasi ex doloremque molestiae beatae porro nostrum corporis saepe sint unde corrupti, rem, ipsum aperiam.</p>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam, fugit! Debitis, dolore. Non repudiandae, qui porro, expedita nulla obcaecati in maxime voluptate ut minus dignissimos. Unde ad inventore expedita voluptas.</p>
 </body>
 </html>
